--- a/main.scss
+++ b/main.scss
@@ -7,32 +7,32 @@
 /*Theme SCSS */
 .banner{ 
     h2{
-        @include text($clr-primary,'20px','center','30px','capitalize','300','arial');
+        @include text($clr-primary,20px,center,30px,capitalize,300,arial);
         @include mobile{
             
             span{
-                @include text($clr-primary,'20px','center','30px','capitalize','300','arial');
+                @include text($clr-primary,20px,center,30px,capitalize,300,arial);
             }
         }
        
     }
     &:hover{
         h2{
-            @include text($clr-primary,'20px','center','30px','capitalize','300','arial');
+            @include text($clr-primary,20px,center,30px,capitalize,300,arial);
         }
     }
      
     @include ipadpro{
-        @include text($clr-primary,'18px','center','25px','capitalize','300','arial');
+        @include text($clr-primary,20px,center,30px,capitalize,300,arial);
     }
     @include ipad{
-        @include text($clr-primary,'18px','center','25px','capitalize','300','arial');
+         @include text($clr-primary,20px,center,30px,capitalize,300,arial);
     }
     @include mobile{
-        @include text($clr-primary,'18px','center','25px','capitalize','300','arial');
+         @include text($clr-primary,20px,center,30px,capitalize,300,arial);
     }
     @include custom_size(300px){
-        @include text($clr-primary,'18px','center','25px','capitalize','300','arial');
+         @include text($clr-primary,20px,center,30px,capitalize,300,arial);
     }
     
 }
