--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
+@import "_mixins"; // Functions
 @import "_fonts"; //Fonts
 @import "_theme"; //Theme
-@import "_mixins"; // Functions
-@import "_forms"; // Responsive
+@import "_forms"; // Forms
+@import "_main"; // Main
 @import "_responsive"; // Responsive
 
+ 
