--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,6 +1,6 @@
-/* Forms CSS*/
+/* _forms.scss */ /* Forms CSS*/
 .form-group {
-  margin: 0;
+  margin: 0 0 10px 0;
   padding: 0;
   & label{
       font-size: 16px;
@@ -8,11 +8,12 @@
   & .form-control {
     border: 0;
     padding: 15px 30px;
-    border-radius: 0;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    -o-border-radius: 0;
+    @include radius(0);
+    &:focus{
+        box-shadow: 0 0 0 transparent;
+        outline: 0;
+        border: 1px solid #ddd;
+    }
   }
   & textarea.form-control {
     min-height: 130px;
@@ -20,9 +21,5 @@
 }
 .btn {
   border: 0;
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  -ms-border-radius: 0;
-  -o-border-radius: 0;
+  @include radius(0);
 }
