--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,30 +1,30 @@
-@mixin desktopxl {
+@mixin desktop-xl {
   @media screen and (max-width: 1600px) {
     @content;
   }
 }
-@mixin desktoplg {
+@mixin desktop-lg {
   @media screen and (max-width: 1440px) {
     @content;
   }
 }
-@mixin desktopsm {
+@mixin desktop-sm {
   @media screen and (max-width: 1366px) {
     @content;
   }
 }
-@mixin ipadpro {
-  @media screen and (max-width: 1112px) {
+@mixin ipad-pro {
+  @media screen and (max-width: 1170px) {
     @content;
   }
 }
-@mixin ipadmini {
+@mixin ipad-mini {
   @media screen and (max-width: 768px) {
     @content;
   }
 }
-@mixin mobile {
-  @media screen and (max-width: 480px) {
+@mixin mobile-lg {
+  @media screen and (max-width: 500px) {
     @content;
   }
 }
@@ -39,9 +39,3 @@
   }
 }
 
-// Responsive Usage
-// .banner{
-//     @include mobile {
-//         font-size: 1.5rem;
-//       }
-// }
