--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,10 +1,4 @@
-/* Theme CSS */
-:root {
-  --ff-arial: "arial";
-  --bg-primary: #fff;
-  --bg-secondary: #000;
-}
-
+/* _theme.scss */ /* Theme CSS */
 html,
 body {
   margin: 0;
@@ -12,63 +6,69 @@ body {
   scroll-behavior: smooth;
 }
 h1 {
-    font-size: 70px;
+  font-size: 70px;
 }
 h2 {
-    font-size: 60px;
+  font-size: 60px;
 }
 h3 {
-    font-size: 50px;
+  font-size: 50px;
 }
 h4 {
-    font-size: 40px;
+  font-size: 40px;
 }
 h5 {
-    font-size: 30px;
+  font-size: 30px;
 }
 h6 {
-    font-size: 20px;
+  font-size: 20px;
 }
 
-p{
-    font-size: 18px;
-    & a{
-        text-decoration: none;
-        
-    }
-   
+p {
+  font-size: 18px;
+  & a {
+    text-decoration: none;
+  }
 }
-ul{
+a{
+  font-size: 18px;
+  text-decoration: none;
+  &:hover{
+    text-decoration: none;
+  }
+}
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  & li {
     padding: 0;
     margin: 0;
-    list-style: none;
-    & li{
-        padding: 0;
-        margin: 0;
-        position: relative;
+    position: relative;
+    font-size: 18px;
+  }
+  & a {
+    text-decoration: none;
+  }
+}
+table {
+  border: 0;
+  & thead {
+    & tr {
+      border: 0;
+      & th {
         font-size: 18px;
+        border: 0;
+      }
     }
-    & a{
-        text-decoration: none;
+  }
+  & tbody {
+    & tr {
+      & td {
+        font-size: 18px;
+        border: 0;
+      }
     }
+  }
 }
-table{
-    border:0;
-    & thead{
-        & tr{
-            border:0;
-            & th{
-                font-size: 18px;
-                border:0;
-            }
-        }
-    }
-    & tbody{
-        & tr{
-            & td{
-                font-size: 18px;
-                border:0;
-            }
-        }
-    }
-}
+
